# Autonomous-AI

./: .gitignore  PCL_install.sh  README.md  ROS 개발 환경 구축 명령어.txt
Day1/: OpenCV_install.sh  README.md
Day1/1_07_CV_LineDetection/: CVline.ipynb  CVlineDetection.ipynb  CVlineDetection.py  CVlineDetection_ans.py  SDC_project_1.py  requirements.txt
Day1/1_08_DL_LineDetection/: DLline.ipynb  main.py  make_video.py  requirements.txt  test_video_lanenet.py
Day1/1_09_image-segmentation-keras/: myCode.py  myCode_color.py  myPred.py  segRoad.ipynb  video.py  view_usp=sharing.html
Day1/ROS_Example/: CMakeLists.txt  package.xml
Day1/pub_sub_example/: package.xml
Day2/: README.md  객체인식대회(YOLO).ipynb
Day2/2.2_LineDetection/: README.md
Day2/2_01_CV_Object_Recognition/: CV_object_recognition.ipynb  README.md  extract_cars.py  extract_cars2.py  model
Day2/2_02_Mask_R-CNN_object_Recognition/: MASK_R_CNN(HOT).ipynb
Day2/2_03_SSD_object_Recognition/: SSD(HOT).ipynb  visualization.py
Day2/2_04_YOLO_object_Recognition/: YOLO(HOT).ipynb
Day2/2_05_CV_Object_Tracking/: CV_object_tracking.ipynb  output.avi  tracking.py  tracking_test.py
Day2/2_06_DeepSORT_object_Tracking/: DeepSort_object_tracking.ipynb  demo.py  (+2 more)
Day3/: PCL_install.sh  README.md  ROS 개발 환경 구축 명령어.txt  ROS 패키지 생성 명령어 및 노드 구동 명령어.txt
Day3/3_04_pcl_test/: CMakeLists.txt  package.xml
Day3/3_04_pcl_test/src/: .15befdc824f52419f842ba5b367df862214c3a3.cam  .3d7d6eacff3c06e48c45d0bff81fcbb2324fefe4.cam  pcl_test.cpp  pcl_test_node.cpp  test_pcd.pcd
Day4/: README.md
Day5/: 5_02_DeepRacer_HOT.py  README.md
(+140 files in other folders)
